# plato-sdk

./: README.md  pyproject.toml
docs/: PROMPT-COOKBOOK.md
javascript/: package.json
javascript/examples/: browser-demo.html  quickstart.ts
javascript/src/: client.ts  index.ts  room.ts  tile.ts
python/: pyproject.toml
python/examples/: build_agent.py  connect.py  constraint_sync.py  file_tile.py  fleet_bridge.py  quickstart.py  search_tiles.py
python/plato_sdk/: __init__.py  client.py  query.py  room.py  tile.py
src/plato_sdk/: __init__.py  agent.py  armor.py  cli.py  client.py  equipment.py  fleet_math.py  session.py  skills.py  tile.py
tests/: test_v3.py
