[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "plato-sdk"
version = "0.1.0"
description = "Developer SDK for PLATO tile-based knowledge store"
readme = "../README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SuperInstance"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/SuperInstance/plato-sdk"
Repository = "https://github.com/SuperInstance/plato-sdk"

[tool.setuptools.packages.find]
include = ["plato_sdk*"]
